test_suite5/ALAN/test_suite/alan-2022-examples/failing/006340_mutation.alan
source YY begin leave 2 end + 8 end
